added scss color variable

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,6 +2,7 @@
 
 body {
     margin:0;
-    background-color: $wild-color;
-    color: $light;
+    background-color: #000014;
+    height: 100%;
+
 }
