added color variables

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,2 +1,6 @@
-$wild-color: #ff6c71;
-$light: #fffbfb;
+$bg-color: #000014;
+$color-1: #6A6B6C;
+$color-2: #235E9C;
+$color-3: #A5A5A5;
+$color-4: #75A8BE;
+$color-5: #4F89AC;
