--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,5 +4,18 @@ body {
     margin:0;
     background-color: #000014;
     height: 100%;
+}
 
+.home .box {
+    background-color:$color-3;
+    width: 60%;
+    opacity: 0.8;
+    border: white thin ;
+    border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    padding: 2rem;
 }
