--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,12 +3,12 @@
 body {
     margin:0;
     background-color: #000014;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .home .box {
     background-color:$color-3;
-    width: 60%;
+    width: 60vw;
     opacity: 0.8;
     border: white thin ;
     border-radius: 4px;
