--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -12,8 +12,8 @@ body {
     opacity: 0.8;
     border: white thin ;
     border-radius: 4px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: calc(20vw - 2rem);
+    margin-right: calc(20vw - 2rem);
     margin-top: 2rem;
     margin-bottom: 2rem;
     text-align: center;
