--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,21 +11,21 @@
 {% endblock %}
 
 {% block body %}
-	<div class="home-page">
+	<div class="login-page">
 		<div class="logo-container">
 			<img class="logo" src="{{ asset('build/images/Motorboxcf.png') }}">
 		</div>
 
-		<section class="home-page-button">
-			<div class="button">
-				<h1>
+		<section class="login-button-container">
+			<div>
+				<button class="login-button">
 					S'inscrire
-				</h1>
+				</button>
 			</div>
-			<div class="button">
-				<h1>
+			<div>
+				<button class="login-button">
 					Se connecter
-				</h1>
+				</button>
 			</div>
 		</section>
 	</div>
