added a login page and a login route to avoid conflict

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,23 +10,4 @@
 	<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 {% endblock %}
 
-{% block body %}
-	<div class="login-page">
-		<div class="logo-container">
-			<img class="logo" src="{{ asset('build/images/Motorboxcf.png') }}">
-		</div>
-
-		<section class="login-button-container">
-			<div>
-				<button class="login-button">
-					S'inscrire
-				</button>
-			</div>
-			<div>
-				<button class="login-button">
-					Se connecter
-				</button>
-			</div>
-		</section>
-	</div>
-{% endblock %}
+{% block body %}{% endblock %}
