show.html.twid select the checkbox to link it with the name of the part and the gauge

--- a/templates/parts/show.html.twig
+++ b/templates/parts/show.html.twig
@@ -9,34 +9,34 @@
     <h2>nombre d'heure</h2>
 
     <div class="namePart">
-        <label>
+        <label for="partOne">
             <p>nom de pièce</p>
             <progress value = "43" max = "100"> </progress>
-            <input type="checkbox" name="my-checkbox" id="opt-in">
+            <input type="checkbox" name="my-checkbox" id="partOne">
         </label>
     </div>
 
     <div class="namePart">
-        <label>
+        <label for="partTwo">
             <p>nom de pièce</p>
             <progress value = "43" max = "100"> </progress>
-            <input type="checkbox" name="my-checkbox" id="opt-in">
+            <input type="checkbox" name="my-checkbox" id="partTwo">
         </label>
     </div>
 
     <div class="namePart">
-        <label>
+        <label for="partThree">
             <p>nom de pièce</p>
             <progress value = "43" max = "100"> </progress>
-            <input type="checkbox" name="my-checkbox" id="opt-in">
+            <input type="checkbox" name="my-checkbox" id="partThree">
         </label>
     </div>
 
     <div class="namePart">
-        <label>
+        <label for="partFour">
             <p>nom de pièce</p>
-            <input type="checkbox" name="my-checkbox" id="opt-in">
             <progress value = "43" max = "100"> </progress>
+            <input type="checkbox" name="my-checkbox" id="partFour">
         </label>
     </div>
 
