--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -31,7 +31,6 @@ body {
 .parts h2 {
     background-color: $color-3;
     width: 60vw;
-    opacity: 0.8;
     border: white thin;
     border-radius: 3px;
     margin-left: auto;
@@ -40,6 +39,16 @@ body {
     margin-bottom: 1rem;
     text-align: center;
     padding: 7px;
+}
+
+.namePart p {
+    background-color: #A5A5A5;
+    border-radius: 1px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 3px;
 }
 
 progress{
