changed  login name to landingpage so we avoid futur conflict.

--- a/templates/home/landingpage.html.twig
+++ b/templates/home/landingpage.html.twig
@@ -11,19 +11,19 @@
 {% endblock %}
 
 {% block body %}
-	<div class="login-page">
+	<div class="landing-page">
 		<div class="logo-container">
 			<img class="logo" src="{{ asset('build/images/Motorboxcf.png') }}">
 		</div>
 
-		<section class="login-button-container">
+		<section class="landing-button-container">
 			<div>
-				<button class="login-button">
+				<button class="landing-button">
 					S'inscrire
 				</button>
 			</div>
 			<div>
-				<button class="login-button">
+				<button class="landing-button">
 					Se connecter
 				</button>
 			</div>
