--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,15 +4,15 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 body {
     background-color: $bg-color;
     color: $color-1;
 }
+// ---------------------------------Landing page------------------------------------ //
 
-.login-page{
+.landing-page{
     display: flex;
     flex-direction: column;
 }
@@ -26,11 +26,11 @@ body {
     width: 100%;
 }
 
-.login-button-container{
-    text-align: center;    
+.landing-button-container{
+    text-align: center;
 }
 
-.login-button{
+.landing-button{
     background-color: $color-3;
     font-size: 1em;
     border-radius: 2rem;
@@ -38,3 +38,4 @@ body {
     height: 10vh;
     margin-bottom: 4rem;
 }
+// ---------------------------------End Landing page------------------------------------ //
