--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -22,6 +22,23 @@ body {
 
 /* Page /Parts in show.html.twig */
 
+.nameMotor .box {
+    background-color:$color-3;
+    width: 47vw;
+    opacity: 0.8;
+    border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    padding: 2rem;
+}
+
+.nameMotor p {
+    margin-top:2rem;
+}
+
 .parts {
   display: flex;
   flex-direction: column;
@@ -31,7 +48,6 @@ body {
 .parts h2 {
     background-color: $color-3;
     width: 60vw;
-    border: white thin;
     border-radius: 3px;
     margin-left: auto;
     margin-right: auto;
@@ -39,6 +55,7 @@ body {
     margin-bottom: 1rem;
     text-align: center;
     padding: 7px;
+    font-size: 1rem;
 }
 
 .namePart p {
@@ -48,20 +65,52 @@ body {
     margin-right: auto;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    padding: 3px;
+    padding: 6px;
+    text-align: center;
+    width: 45%;
 }
+
+.namePart input {
+    display: none;
+}
+
 
 progress{
   margin-top: 2px;
+  padding-right:10rem;
+}
+
+::-moz-progress-bar{
+    background-color: RED;
 }
 
 .buttonReplace {
-    border-radius: 34px;
+    border-radius: 3px;
+    border: none;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-top: 2rem;
     text-align: center;
     padding: 1rem;
     background-color: $color-2;
+    color: white;
+    padding-right: 6rem;
+    padding-left: 6rem;
+    font-size: 1rem;
 }
+
+.buttonAddPiece {
+    border-radius: 3px;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1rem;
+    text-align: center;
+    padding: 1rem;
+    background-color: #235E9C;
+    color: white;
+    padding-right: 6.5rem;
+    padding-left: 6.5rem;
+    font-size: 1rem;
+}
+/* end page part/show.html.twig*/
