--- a/templates/parts/show.html.twig
+++ b/templates/parts/show.html.twig
@@ -14,7 +14,7 @@
             <input type="checkbox" name="my-checkbox" id="partOne">
         </label>
     </div>
-        <progress value = "70" max = "100"> </progress>
+        <progress class="warning" value = "70" max = "100" class="progress"> </progress>
 
     <div class="namePart">
         <label for="partTwo">
@@ -22,7 +22,7 @@
             <input type="checkbox" name="my-checkbox" id="partTwo">
         </label>
     </div>
-        <progress value = "100" max = "100"> </progress>
+        <progress class="alert" value = "100" max = "100" class="progress"> </progress>
 
     <div class="namePart">
         <label for="partThree">
@@ -30,7 +30,7 @@
             <input type="checkbox" name="my-checkbox" id="partThree">
         </label>
     </div>
-        <progress value = "43" max = "100"> </progress>
+        <progress class="ok" value = "43" max = "100" class="progress"> </progress>
 
     <div class="namePart">
         <label for="partFour">
@@ -38,7 +38,7 @@
             <input type="checkbox" name="my-checkbox" id="partFour">
         </label>
     </div>
-        <progress value = "43" max = "100"> </progress>
+        <progress value = "43" max = "100" class="progress"> </progress>
 
     <div >
         <button class="buttonReplace" type="submit">Remplacer pièce</button>
