made some change in my css and twig view

--- a/templates/home/landingpage.html.twig
+++ b/templates/home/landingpage.html.twig
@@ -17,16 +17,15 @@
 		</div>
 
 		<section class="landing-button-container">
-			<div>
-				<button class="landing-button">
-					S'inscrire
-				</button>
-			</div>
-			<div>
-				<button class="landing-button">
-					Se connecter
-				</button>
-			</div>
+
+			<a class="landing-button">
+				S'inscrire
+			</a>
+
+			<a class="landing-button">
+				Se connecter
+			</a>
+
 		</section>
 	</div>
 {% endblock %}
