--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,25 +17,28 @@ body {
     flex-direction: column;
 }
 
-.logo-container{
-    margin-bottom: 4rem;
+.landing-page .logo-container{
+    margin-bottom: 2rem;
     text-align: center;
 }
 
-.logo{
+.landing-page .logo{
     width: 100%;
 }
 
+
 .landing-button-container{
-    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .landing-button{
     background-color: $color-3;
     font-size: 1em;
     border-radius: 2rem;
-    width: 60vw;
-    height: 10vh;
-    margin-bottom: 4rem;
+    padding: 2rem;
+    margin: 2rem;
+    text-align: center;
+    color: $bg-color;
 }
 // ---------------------------------End Landing page------------------------------------ //
