--- a/templates/add_vehicle/addVehicle.html.twig
+++ b/templates/add_vehicle/addVehicle.html.twig
@@ -7,7 +7,7 @@
             <label for="brand-select">Sélectionner la marque de votre Véhicule : </label>
             <select name="brand" id="brand-select">
                 <option value="">Marque</option>
-                <option value="suzuki">Suzuki</option>
+                <option value="Suzuki">Suzuki</option>
             </select>
         </div>
         <div class="box selectBox">
@@ -32,7 +32,7 @@
             <p>Nombre d'heure d'utilisation de la moto : </p>
             <input type="text" class="moto-input" name="usage" id="moto-usage">
         </div>
-    <button class="button">Suivant</button>
+        <button class="button">Suivant</button>
     </form>
 
 {% endblock %}
