--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -19,21 +19,37 @@ button {
     border-radius: 4px;
 }
 
+.home {
+    padding: 1em;
+    width:max-content;
+}
+
 .home .box {
-    width: 60vw;
-    margin-left: calc(20% - 2rem);
-    margin-right: calc(20% - 2rem);
     margin-top: 2rem;
     margin-bottom: 2rem;
     padding: 2rem;
 }
 
+.home .aBox {
+    opacity: 0.8;
+    background-color: $color-3;
+    border: white thin ;
+    text-align: center;
+    border-radius: 4px;
+    text-decoration: none;
+    color: black;
+    padding-left: 9rem;
+    padding-right: 9rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
 .addVehicle {
     padding: 1em;
+    min-height: 100vh;
 }
 
 .addVehicle .selectBox {
-    width: 60vw;
     padding: 1rem;
     margin-top: 1rem;
 }
@@ -53,9 +69,8 @@ button {
 
 .addVehicle .button{
     padding-left: calc(45vw - 1rem);
-    padding-right: calc(45vw - 1rem);
+    padding-right: calc(45vw - 1.5rem);
     padding-top: 1rem;
     padding-bottom: 1rem;
-    position: fixed;
-    bottom: 1rem;
+    margin-top: 1rem;
 }
