--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -7,4 +7,9 @@
         {% endfor %} #}
         <a class="aBox" href="/addVehicle"> Ajouter </a>
     </section>
+    <section name="navbar">
+        <a class="aBox">Home</a>
+            <img src="">
+        <a class="aBox">Menu</a>
+    </section>
 {% endblock %}
