made some change in the controller and css and landingpage view

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -40,5 +40,6 @@ body {
     margin: 2rem;
     text-align: center;
     color: $bg-color;
+    text-decoration: none;
 }
 // ---------------------------------End Landing page------------------------------------ //
