--- a/templates/landingpage/landingpage.html.twig
+++ b/templates/landingpage/landingpage.html.twig
@@ -18,11 +18,11 @@
 
 		<section class="landing-button-container">
 
-			<a href="/register" class="landing-button">
+			<a href="/vehicle/" class="landing-button">
 				S'inscrire
 			</a>
 
-			<a href="/vehicle" class="landing-button">
+			<a href="/vehicle/" class="landing-button">
 				Se connecter
 			</a>
 
