--- a/templates/part/index.html.twig
+++ b/templates/part/index.html.twig
@@ -12,7 +12,7 @@
         {% for part in parts %}
         <div class="namePart">
             <label for="{{ part.id }}">{{ part.name }}</label>
-            <progress value = "{{ part.lifespan }}" max = "100"> </progress>
+            <progress value = "{{ vehicles.0.usedHour }}" max = "{{ part.lifespan }}"> </progress>
             <input type="checkbox" name="my-checkbox" id="{{ part.id }}">
         </div>
         {% endfor %}
