--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -154,7 +154,7 @@ progress.ok { color: green; }
 }
 
 .landing-page .logo-container{
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
     text-align: center;
 }
 
@@ -162,17 +162,21 @@ progress.ok { color: green; }
     width: 100%;
 }
 
+
 .landing-button-container{
-    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .landing-button{
     background-color: $color-3;
     font-size: 1em;
     border-radius: 2rem;
-    width: 60vw;
-    height: 10vh;
-    margin-bottom: 4rem;
+    padding: 2rem;
+    margin: 2rem;
+    text-align: center;
+    color: $bg-color;
+    text-decoration: none;
 }
 
 // ---------------------------------End Landing page------------------------------------ //
