--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -3,43 +3,15 @@
 {% block title %}Vehicle index{% endblock %}
 
 {% block body %}
-    <h1>Vehicle index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Brand</th>
-                <th>Model</th>
-                <th>ProductYear</th>
-                <th>UsedHour</th>
-                <th>IdMotorbox</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <section class="home">
         {% for vehicle in vehicles %}
-            <tr>
-                <td>{{ vehicle.id }}</td>
-                <td>{{ vehicle.name }}</td>
-                <td>{{ vehicle.brand }}</td>
-                <td>{{ vehicle.model }}</td>
-                <td>{{ vehicle.productYear }}</td>
-                <td>{{ vehicle.usedHour }}</td>
-                <td>{{ vehicle.idMotorbox }}</td>
-                <td>
-                    <a href="{{ path('vehicle_show', {'id': vehicle.id}) }}">show</a>
-                    <a href="{{ path('vehicle_edit', {'id': vehicle.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
+            <a href="{{ path('part_index') }}" ><p class="box">{{ vehicle.name }}<br>{{ vehicle.brand }} {{ vehicle.model }}</p></a>
         {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('vehicle_new') }}">Create new</a>
+        <a class="aBox" href="{{ path('vehicle_new') }}"> Ajouter </a>
+    </section>
+    <section name="navbar">
+        <a class="aBox">Home</a>
+            <img src="">
+        <a class="aBox">Menu</a>
+    </section>
 {% endblock %}
