change path for login un homepage

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -20,7 +20,7 @@
 				<a class="landing-button" href="{{ path('vehicle_index') }}">
 					S'inscrire
 				</a>
-				<a class="landing-button" href="{{ path('vehicle_index') }}">
+				<a class="landing-button" href="{{ path('login') }}">
 					Se connecter
 				</a>
 		</section>
