--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -13,8 +13,8 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="_password"/>
 
-        {# If you want to control the URL the user is redirected to on success
-        <input type="hidden" name="_target_path" value="/account"/> #}
+         {# If you want to control the URL the user is redirected to on success #}
+        <input type="hidden" name="_target_path" value="{{ path('vehicle_index') }}"/>
 
         <button type="submit">login</button>
     </form>
