create and add _navbar on view

--- a/templates/add_vehicle/addVehicle.html.twig
+++ b/templates/add_vehicle/addVehicle.html.twig
@@ -34,5 +34,6 @@
         </div>
         <button class="button">Suivant</button>
     </form>
+    {% include "_navbar.html.twig" %}
 
 {% endblock %}
