--- a/templates/vehicle/new.html.twig
+++ b/templates/vehicle/new.html.twig
@@ -8,4 +8,5 @@
     {{ include('vehicle/_form.html.twig') }}
 
     <a href="{{ path('vehicle_index') }}">back to list</a>
+    {% include "_navbar.html.twig" %}
 {% endblock %}
