--- a/templates/vehicle/show.html.twig
+++ b/templates/vehicle/show.html.twig
@@ -43,4 +43,5 @@
     <a href="{{ path('vehicle_edit', {'id': vehicle.id}) }}">edit</a>
 
     {{ include('vehicle/_delete_form.html.twig') }}
+    {% include "_navbar.html.twig" %}
 {% endblock %}
