--- a/templates/vehicle/edit.html.twig
+++ b/templates/vehicle/edit.html.twig
@@ -10,4 +10,5 @@
     <a href="{{ path('vehicle_index') }}">back to list</a>
 
     {{ include('vehicle/_delete_form.html.twig') }}
+    {% include "_navbar.html.twig" %}
 {% endblock %}
