a little css for navbar

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -240,3 +240,21 @@ progress.ok { color: green; }
     margin-top: 1rem;
 }
 // ---------------------------------END LOGIN------------------------------------ //
+// ---------------------------------START REGISTER------------------------------------ //
+// ---------------------------------END REGISTER------------------------------------ //
+// ---------------------------------START FORGOT PASSWORD------------------------------------ //
+// ---------------------------------END FORGOT PASSWORD------------------------------------ //
+// ---------------------------------START NAVBAR------------------------------------ //
+.aBox{
+    background-color: $color-3;
+    font-size: 1em;
+    padding: 1rem;
+    text-align: center;
+    color: $bg-color;
+    text-decoration: none;
+}
+.navbar {
+    position: fixed;
+    bottom: 3rem;
+}
+// ---------------------------------END NAVBAR------------------------------------ //
