--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,5 +1,5 @@
-<section name="navbar">
+<div class="navbar">
     <a class="aBox" href="{{ path('vehicle_index') }}">Home</a>
-    <img src="">
+    <img src="https://picsum.photos/250/50">
     <a class="aBox" href="{{ path('app_logout') }}">Menu</a>
-</section>
+</div>
