import and use font

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -10,6 +10,9 @@ body {
     background-color: $bg-color;
     color: $color-1;
     min-height: 100vh;
+    font-family: 'catamaran', sans-serif;
+    font-weight: 600;
+    font-size: x-large;
   
 }
 
