--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@400;600;800&display=swap');
+
 $bg-color: #000014;
 $color-1: #6A6B6C;
 $color-2: #235E9C;
