change route for register on landingpage and add a little css on registerpage

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -17,7 +17,7 @@
 		</div>
 
 		<section class="landing-button-container">
-				<a class="landing-button" href="{{ path('vehicle_index') }}">
+				<a class="landing-button" href="{{ path('app_register') }}">
 					S'inscrire
 				</a>
 				<a class="landing-button" href="{{ path('login') }}">
