--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@400;600;800&display=swap');
 
 $bg-color: #000014;
-$color-1: #6A6B6C;
-$color-2: #235E9C;
-$color-3: #A5A5A5;
-$color-4: #75A8BE;
-$color-5: #4F89AC;
+$color-1: #6a6b6c;
+$color-2: #235e9c;
+$color-3: #a5a5a5;
+$color-4: #75a8be;
+$color-5: #4f89ac;
