the progress bar is removed from the div: namepart in templates vehicle/partShow.html.twig

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -37,7 +37,7 @@ button {
     padding: 2rem;
 }
 
-/* Page /Parts in show.html.twig */
+/* ---------------------------------------------------- Page /Parts --------------------------------------------------------------*/
 
 .nameMotor .box {
     background-color:$color-3;
@@ -74,7 +74,7 @@ button {
 }
 
 .parts progress {
-    width: 100%;;
+    width: 20rem;
 }
 
 .namePart label {
@@ -148,7 +148,7 @@ progress.ok { color: green; }
     font-size: 1rem;
 }
 
-/* end page part/show.html.twig*/
+/*------------------------------------------ end page part---------------------------------------*/
 // ---------------------------------Landing page------------------------------------ //
 
 .landing-page{
