correct error syntax on sccs

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -6,3 +6,9 @@ $color-2: #235e9c;
 $color-3: #a5a5a5;
 $color-4: #75a8be;
 $color-5: #4f89ac;
+
+// variable colors temporarly
+$green: #008000; // used for buttons
+$white: #ffffff; // used for .box
+$black: #000000;
+
