--- a/templates/part/index.html.twig
+++ b/templates/part/index.html.twig
@@ -3,8 +3,7 @@
 {% block title %}Part index{% endblock %}
 
 {% block body %}
-{{ dump(vehicles) }}
-{# <section class="nameMotor">
+<section class="nameMotor">
         <p class="box"> {{ vehicles.0.name }} <br> {{ vehicles.0.brand }} <br> {{ vehicles.0.model }} </p>
     </section>
     <div class="flex parts">
@@ -19,6 +18,6 @@
         <a class="buttonReplace" href="{{ path('part_edit') }}">Remplacer pièce</a>
         <a class="buttonAddPiece" href="{{ path('part_new') }}">Ajouter pièce</a>
 
-    </div> #}
+    </div>
 
 {% endblock %}
