--- a/templates/vehicle/_form.html.twig
+++ b/templates/vehicle/_form.html.twig
@@ -1,4 +1,39 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="button">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
+
+<!--
+<form action="" method="post" class="addVehicle">
+    <div class="box selectBox">
+        <label for="brand-select">Sélectionner la marque de votre Véhicule : </label>
+        <select name="brand" id="brand-select">
+            <option value="">Marque</option>
+            <option value="Suzuki">Suzuki</option>
+        </select>
+    </div>
+    <div class="box selectBox">
+        <label for="model-select" >Sélectionner le modèle de votre Véhicule : </label>
+        <select name="model" id="model-select">
+            <option value="">Modèle</option>
+            <option value="gsx-s_950">GSX-S 950</option>
+        </select>
+    </div>
+    <div class="box selectBox">
+        <label for="year-select" >Sélectionner l'année de votre Véhicule : </label>
+        <select name="year" id="year-select">
+            <option value="">Année</option>
+            <option value="2021">2021</option>
+        </select>
+    </div>
+    <div class="box inputBox">
+        <label for="moto-name">Nom de la moto : </label>
+        <input type="text" class="moto-input" name="name" id="moto-name">
+    </div>
+    <div class="box inputBox">
+        <p>Nombre d'heure d'utilisation de la moto : </p>
+        <input type="text" class="moto-input" name="usage" id="moto-usage">
+    </div>
+    <button class="button">Suivant</button>
+</form>
+-->
