--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,17 +7,18 @@
     <div class="logo-container">
         <img class="logo" src="{{ asset('build/images/Motorboxcf.png') }}">
     </div>
-
-    <h1>Register</h1>
-		<div class="login-container">
-            {{ form_start(registrationForm) }}
+    <div id="register-title">
+        <h1>Register</h1>
+    </div>
+		    <div class="login-container">
+                {{ form_start(registrationForm) }}
                 {{ form_row(registrationForm.email) }}
                 {{ form_row(registrationForm.plainPassword, {
                     label: 'Password'
                 }) }}
                 {{ form_row(registrationForm.agreeTerms) }}
 
-                <button type="submit" class="btn">Register</button>
-            {{ form_end(registrationForm) }}
-        </div>
+                    <button type="submit" class="btn">Register</button>
+                {{ form_end(registrationForm) }}
+            </div>
 {% endblock %}
