--- a/templates/vehicle/partShow.html.twig
+++ b/templates/vehicle/partShow.html.twig
@@ -16,8 +16,8 @@
         </div>
         <progress value = "{{ vehicle.0.usedHour }}" max = "{{ part.lifespan }}"></progress>
         {% endfor %}
-        <a class="buttonReplace" href="#">Remplacer pièce</a>
-        <a class="buttonAddPiece" href="#">Ajouter pièce</a>
+        <a class="buttonReplace conteneur-link"  href="#">Remplacer pièce</a>
+        <a class="buttonAddPiece conteneur-link" href="#">Ajouter pièce</a>
 
     </div>
 
