--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -51,24 +51,26 @@ button {
     margin-bottom: 2rem;
     margin-top: 2rem;
     border-radius: 4px;
-    width: 10rem;
+    width: 17rem;
     padding: 2rem;
     text-align: center;
     color: $black;
     opacity: .8;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .parts {
     align-items: center;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    margin-left: 2rem;
 }
 
 .parts h2 {
     background-color: $color-3;
     color: $black;
     border-radius: 3px;
-    width: 12rem;
     font-size: 1rem;
     margin-bottom: 2rem;
     margin-top: 1rem;
@@ -90,7 +92,8 @@ button {
     margin-top: 1rem;
     margin-left: auto;
     margin-right: auto;
-    padding: 6px;
+    padding-left: 4px;
+    padding-right: 10px;
     color: $black;
 }
 
@@ -112,7 +115,7 @@ progress{
 }
 
 .buttonReplace {
-    background-color: $color-2;
+    background-color: $color-blue;
     border-radius: 3px;
     color: $white;
     text-align: center;
@@ -124,10 +127,11 @@ progress{
     padding: 1rem;
     padding-left: 6rem;
     padding-right: 6rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
 
 .buttonAddPiece {
-    background-color: #235E9C;
+    background-color: $color-blue;
     border-radius: 3px;
     border: 0;
     color: $white;
@@ -139,6 +143,7 @@ progress{
     padding: 1rem;
     padding-left: 6.5rem;
     padding-right: 6.5rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
 
 // ------------------------------------------ end page part---------------------------------------
@@ -171,10 +176,11 @@ progress{
     margin: 2rem;
     text-align: center;
     color: $bg-color;
-    text-decoration: none;
     box-shadow: rgba(18, 14, 130, 0.88) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
-
+p.box {
+    color:$black
+}
 // ---------------------------------End Landing page------------------------------------
 //---------------------------------register--------------------------------
 #register-title {
@@ -187,7 +193,6 @@ progress{
     border-radius: 4px;
     border: thin $white;
     text-align: center;
-    text-decoration: none;
     color: $black;
     padding: 1rem 9rem;
     box-shadow: rgba(18, 14, 130, 0.88) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
@@ -249,12 +254,18 @@ progress{
     font-size: 1em;
     padding: 1rem;
     text-align: center;
-    text-decoration: none;
 }
 
 .navbar {
     bottom: 3rem;
     position: fixed;
+    display: flex;
 }
 
 // ---------------------------------END NAVBAR------------------------------------ //
+
+//------------------------------------conteneurlink------------------------------------------
+.conteneur-link{
+    text-decoration: none;
+}
+//-----------------------------------end conteneurlink-------------------------------------
