--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -17,10 +17,10 @@
 		</div>
 
 		<section class="landing-button-container">
-				<a class="landing-button" href="{{ path('app_register') }}">
+				<a class="landing-button conteneur-link" href="{{ path('app_register') }}">
 					S'inscrire
 				</a>
-				<a class="landing-button" href="{{ path('login') }}">
+				<a class="landing-button conteneur-link" href="{{ path('login') }}">
 					Se connecter
 				</a>
 		</section>
