delete user/add vehicle and  add vehicle

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -202,6 +202,9 @@ progress{
 
 }
 
+//------------------------------add vehicle---------------------------------
+
+//------------------------------css/template add vehicle--------------------
 .addVehicle {
     min-height: 100vh;
     padding: 1em;
@@ -228,6 +231,9 @@ progress{
     padding-left: calc(45vw - 1rem);
     padding-right: calc(45vw - 1.5rem);
 }
+//-------------------------------- css new/vehicle----------------------------------
+
+//---------------------------------end add vehicle----------------------------------
 
 // ---------------------------------START LOGIN------------------------------------ //
 .login-container > form {
