User can now add vehicle

--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <section class="home">
-        {% for vehicle in vehicles %}
+        {% for vehicle in user.vehicles %}
             <a class="conteneur-link" href="{{ path('part_index') }}" ><p class="box">{{ vehicle.name }}<br>{{ vehicle.brand }} {{ vehicle.model }}</p></a>
         {% endfor %}
             <a class="aBox conteneur-link" href="{{ path('vehicle_new') }}"> Ajouter </a>
