--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <section class="home">
         {% for vehicle in user.vehicles %}
-            <a class="container-link" href="{{ path('part_index') }}" ><p class="box">{{ vehicle.name }}<br>{{ vehicle.brand }} {{ vehicle.model }}</p></a>
+            <a class="container-link" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}" ><p class="box">{{ vehicle.name }}<br>{{ vehicle.brand }} {{ vehicle.model }}</p></a>
         {% endfor %}
             <a class="aBox container-link" href="{{ path('vehicle_new') }}"> Ajouter </a>
     </section>
