added a logo to edit a vehicle + css

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -43,6 +43,9 @@ button {
 }
 
 // ---------------------------------------------------- Page /Parts --------------------------------------------------------------
+.fa-edit{
+    width: 2rem;
+}
 
 .nameMotor .box {
     background-color: $color-3;
