--- a/templates/vehicle/edit.html.twig
+++ b/templates/vehicle/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Edit Vehicle</h1>
 
-    {{ include('vehicle/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('vehicle/_form.html.twig', {'button_label': 'Modifier'}) }}
 
     <a href="{{ path('vehicle_index') }}">back to list</a>
 
